y.output
Terminals unused in grammar

   IMPLEMENT
   INLINE
   OP
   REINTRO
   SELF
   USES
   CLASS
   EXCEPT
   EXPORTS
   FINALIZATION
   FINALLY
   PROPERTY
   RAISE
   THREADVAR
   TRY
   DISPOSE
   EXIT
   FALS
   NEW
   TRU
   EXTERN
   GOTO
   LABEL
   OTHERWISE
   PFILE
   SET
   WITH
   ABSTRACT
   ALIAS
   ASSEMBLER
   CDECL
   CPPDECL
   EXPORT
   FAR
   FAR16
   LOCAL
   NEAR
   NOSTACKFRAME
   OLDFPCCALL
   PASCAL
   REGISTER
   SAFECALL
   SOFTFLOAT
   STDCALL
   VIRTUAL
   STARSTAR
   EXCLA
   BITNOT
   BITAND
   BITOR
   DOLLAR
   PERCENT
   HASH
   ATTHERATE
   OVERRIDE
   RESIDENT
   INITIALIZATION
   DISPINTERFACE
   REAL48
   EXTENDED
   CURRENCY
   COMP
   SHORTINT
   SMALLINT
   QWORD
   BYTE
   LONGINT
   INT64
   WORD
   WIDECHAR
   LONGWORD
   PCHAR
   CARDINAL
   OLEVARIANT
   ANSISTR
   WIDESTR
   AUTOMATED
   DYNAMIC
   OVERLOAD
   VARIANT
   OCTAL
   BINARY
   HEXA
   REAL


Grammar

    0 $accept: Goal $end

    1 Goal: program_file

    2 error_recovery_token: INTERFACE
    3                     | IMPLEMENTATION
    4                     | VAR
    5                     | CONST
    6                     | TYPE
    7                     | RESOURCESTRING
    8                     | OBJ
    9                     | FUNC
   10                     | PROCEDURE
   11                     | PBEGIN
   12                     | SEMICOLON
   13                     | END

   14 program_file: program_heading program_block DOT

   15 program_heading: /* empty */
   16                | PROGRAM program_name program_heading_2

   17 program_heading_2: SEMICOLON
   18                  | LPAREN program_param_list RPAREN SEMICOLON

   19 program_name: IDENT

   20 program_param_list: program_param
   21                   | program_param_list COMMA program_param

   22 program_param: IDENT

   23 program_block: program_decl_sect_list Marker3 compound_stmt

   24 program_decl_sect_list: impl_decl_sect_list

   25 impl_decl_sect_list: /* empty */
   26                    | impl_decl_sect_list impl_decl_sect

   27 impl_decl_sect: const_decl_sect
   28               | type_decl_sect
   29               | var_decl_sect
   30               | proc_decl
   31               | func_decl

   32 const_decl_sect: CONST const_decl
   33                | const_decl_sect const_decl

   34 type_decl_sect: TYPE type_decl
   35               | type_decl_sect type_decl

   36 var_decl_sect: VAR var_decl
   37              | var_decl_sect var_decl

   38 const_decl: IDENT EQUAL const_expr SEMICOLON
   39           | IDENT COLON type_ref EQUAL typed_const SEMICOLON
   40           | error error_recovery_token

   41 const_expr: const_simple_expr
   42           | const_simple_expr const_relop const_simple_expr

   43 const_relop: EQUAL
   44            | NOTEQUAL
   45            | LT
   46            | GT
   47            | LE
   48            | GE

   49 const_simple_expr: const_term
   50                  | const_simple_expr const_addop Marker const_term

   51 const_addop: PLUS
   52            | MINUS
   53            | OR
   54            | XOR

   55 const_term: const_factor
   56           | const_term const_mulop Marker const_factor

   57 const_mulop: STAR
   58            | SLASH
   59            | DIV
   60            | MOD
   61            | SHL
   62            | SHR
   63            | AND

   64 const_factor: const_variable
   65             | unsigned_number
   66             | literal
   67             | NIL
   68             | ADDROF const_factor
   69             | LPAREN const_expr RPAREN
   70             | NOT const_factor
   71             | sign const_factor
   72             | UPARROW const_factor
   73             | PTRUE
   74             | PFALSE

   75 sign: PLUS
   76     | MINUS

   77 const_variable: identifier
   78               | const_variable const_variable_2

   79 const_variable_2: DOT identifier
   80                 | UPARROW
   81                 | LPAREN const_func_expr_list RPAREN

   82 const_func_expr_list: const_expr
   83                     | const_expr COMMA const_expr

   84 unsigned_number: INT
   85                | FLOAT

   86 typed_const: const_expr

   87 type_decl: IDENT EQUAL type_decl_type SEMICOLON
   88          | error error_recovery_token

   89 type_decl_type: type_ref
   90               | TYPE type_ref
   91               | object_type

   92 type_ref: simple_type
   93         | string_type
   94         | pointer_type
   95         | structured_type
   96         | procedural_type

   97 simple_type: ord_type_name
   98            | real_type_name
   99            | simple_type_identifier
  100            | range_expr DOTDOT range_expr

  101 range_expr: range_term
  102           | range_expr const_addop Marker range_term

  103 range_term: range_factor
  104           | range_term const_mulop Marker range_factor

  105 range_factor: identifier
  106             | unsigned_number
  107             | sign range_factor
  108             | literal
  109             | identifier LPAREN const_expr RPAREN
  110             | LPAREN const_expr RPAREN

  111 simple_type_identifier: IDENT

  112 pointer_type: UPARROW identifier

  113 structured_type: unpacked_structured_type
  114                | PACKED unpacked_structured_type

  115 unpacked_structured_type: array_type
  116                         | record_type

  117 array_type: ARRAY LSQBRACK arr_simple_type RSQBRACK OF type_ref

  118 arr_simple_type: arr_factor DOTDOT arr_factor

  119 arr_factor: INT

  120 record_type: RECORD field_list END

  121 field_list: fixed_part

  122 fixed_part: fixed_part_2
  123           | fixed_part_2 SEMICOLON

  124 fixed_part_2: record_section
  125             | fixed_part_2 SEMICOLON record_section

  126 record_section: record_section_id_list COLON type_ref

  127 record_section_id_list: record_section_id
  128                       | record_section_id COMMA record_section_id_list

  129 record_section_id: IDENT

  130 string_type: string_type_name
  131            | STRING LSQBRACK const_expr RSQBRACK

  132 procedural_type: procedural_type_kind

  133 procedural_type_kind: procedural_type_decl
  134                     | procedural_type_decl OF OBJ

  135 procedural_type_decl: PROCEDURE fp_list
  136                     | FUNC fp_list COLON fptype

  137 object_type: old_object_type

  138 old_object_type: OBJ oot_successor oot_component_list oot_privat_list END

  139 oot_privat_list: /* empty */
  140                | PRIVATE oot_component_list

  141 oot_component_list: /* empty */
  142                   | oot_field_list
  143                   | oot_field_list oot_method_list
  144                   | oot_method_list

  145 oot_successor: LPAREN oot_typeidentifier RPAREN
  146              | /* empty */

  147 oot_typeidentifier: identifier

  148 oot_field_list: oot_field
  149               | oot_field_list oot_field

  150 oot_field: oot_id_list COLON type_ref SEMICOLON

  151 oot_id_list: oot_field_identifier
  152            | oot_field_identifier COMMA oot_id_list

  153 oot_field_identifier: IDENT

  154 oot_method_list: oot_method
  155                | oot_method oot_method_list

  156 oot_method: oot_method_head

  157 oot_method_head: proc_heading
  158                | func_heading
  159                | oot_constructor_head
  160                | oot_destructor_head

  161 oot_constructor_head: CONSTRUCT proc_name fp_list fp_directives

  162 oot_destructor_head: DESTRUCT proc_name fp_list fp_directives

  163 var_decl: var_name_list COLON type_ref SEMICOLON
  164         | var_name_list COLON type_ref EQUAL var_init_value SEMICOLON
  165         | var_name_list error error_recovery_token

  166 var_init_value: typed_const

  167 var_name_list: var_name
  168              | var_name COMMA var_name_list

  169 var_name: IDENT

  170 proc_decl: proc_heading proc_block

  171 func_decl: func_heading func_block

  172 Marker3: /* empty */

  173 proc_heading: PROCEDURE proc_name fp_list fp_directives
  174             | PROCEDURE proc_name error error_recovery_token

  175 proc_name: IDENT
  176          | visibility_specifier
  177          | proc_name DOT identifier
  178          | proc_name DOT visibility_specifier

  179 func_heading: FUNC func_name fp_list COLON fptype fp_directives
  180             | FUNC func_name fp_directives
  181             | FUNC func_name error error_recovery_token

  182 fp_directives: SEMICOLON

  183 func_name: IDENT
  184          | visibility_specifier
  185          | func_name DOT identifier
  186          | func_name DOT visibility_specifier

  187 proc_block: proc_block_decl

  188 func_block: proc_block_decl

  189 proc_block_decl: block
  190                | asm_block

  191 asm_block: impl_decl_sect_list Marker3 ASMBODY SEMICOLON

  192 block: impl_decl_sect_list Marker3 compound_stmt SEMICOLON

  193 fp_list: /* empty */
  194        | LPAREN fp_sect_list RPAREN

  195 fp_sect_list: /* empty */
  196             | fp_sect
  197             | fp_sect_list SEMICOLON fp_sect

  198 fp_sect: param_name_list COLON fptype_new
  199        | param_name_list
  200        | VAR param_name_list COLON fptype_new
  201        | VAR param_name_list
  202        | OUT param_name_list COLON fptype_new
  203        | OUT param_name_list
  204        | CONST param_name_list COLON fptype_new
  205        | CONST param_name_list

  206 param_name_list: param_name
  207                | param_name COMMA param_name_list

  208 param_name: IDENT

  209 fptype: identifier

  210 fptype_new: fptype
  211           | fptype EQUAL const_expr

  212 stmt: unlabelled_stmt

  213 unlabelled_stmt: /* empty */
  214                | assignment
  215                | proc_call
  216                | compound_stmt
  217                | if_stmt
  218                | case_stmt
  219                | repeat_stmt
  220                | while_stmt
  221                | for_stmt
  222                | asm_stmt

  223 assignment: var_reference ASSIGN expr
  224           | error

  225 proc_call: var_reference

  226 compound_stmt: PBEGIN stmt_list END

  227 stmt_list: stmt
  228          | stmt_list SEMICOLON Marker stmt

  229 if_stmt: IF expr THEN Marker then_branch
  230        | IF expr THEN Marker then_branch ELSE Marker2 Marker else_branch

  231 then_branch: stmt

  232 else_branch: stmt

  233 case_stmt: CASE expr OF case_list else_case END

  234 case_list: case_item
  235          | case_item SEMICOLON case_list

  236 case_item: /* empty */
  237          | case_label_list COLON stmt

  238 case_label_list: case_label
  239                | case_label_list COMMA case_label

  240 case_label: const_expr
  241           | const_expr DOTDOT const_expr

  242 else_case: /* empty */
  243          | ELSE stmt_list

  244 repeat_stmt: REPEAT Marker stmt_list UNTIL Marker expr

  245 while_stmt: WHILE Marker expr DO Marker stmt

  246 for_stmt: FOR for_special DO stmt

  247 for_special: identifier ASSIGN expr TO expr
  248            | identifier ASSIGN expr DOWNTO expr

  249 asm_stmt: ASMBODY

  250 expr_list: expr
  251          | expr COMMA expr_list

  252 expr: simple_expr
  253     | simple_expr relop simple_expr

  254 relop: EQUAL
  255      | NOTEQUAL
  256      | LT
  257      | GT
  258      | LE
  259      | GE

  260 simple_expr: term
  261            | simple_expr addop Marker term

  262 addop: PLUS
  263      | MINUS
  264      | OR
  265      | XOR

  266 term: factor
  267     | term mulop Marker factor

  268 mulop: STAR
  269      | SLASH
  270      | DIV
  271      | MOD
  272      | SHL
  273      | SHR
  274      | AND

  275 factor: unsigned_number
  276       | literal
  277       | NIL
  278       | LSQBRACK elem RSQBRACK
  279       | NOT factor
  280       | sign factor
  281       | UPARROW factor
  282       | var_reference
  283       | PTRUE
  284       | PFALSE

  285 Marker: /* empty */

  286 Marker2: /* empty */

  287 var_reference: var_address variable
  288              | variable

  289 var_address: ADDROF
  290            | var_address ADDROF

  291 variable: identifier
  292         | INHERITED identifier
  293         | LPAREN expr RPAREN
  294         | LPAREN RPAREN
  295         | variable var_specifiers

  296 var_specifiers: LSQBRACK expr_list RSQBRACK
  297               | LSQBRACK RSQBRACK
  298               | LPAREN expr_list RPAREN
  299               | LPAREN RPAREN
  300               | DOT identifier
  301               | UPARROW

  302 elem: expr
  303     | expr DOTDOT expr

  304 literal: CHAR_STRING
  305        | ASCIICHAR
  306        | CHAR_STRING literal
  307        | ASCIICHAR literal

  308 real_type_name: REALS
  309               | SINGLE
  310               | DOUBLE

  311 ord_type_name: INTEGER
  312              | BOOLEAN
  313              | CHAR

  314 string_type_name: STRING

  315 property_specifier_directives: DEFAULT
  316                              | READ
  317                              | WRITELN
  318                              | WRITE
  319                              | store_argumentD
  320                              | NODEFAULT
  321                              | IMPLEMENTS
  322                              | WRITEONLY
  323                              | READONLY

  324 non_reserved: AT
  325             | ABSOLUTE
  326             | ON
  327             | NAME
  328             | INDEX
  329             | MESSAGE
  330             | CONTAINS
  331             | REQUIRES
  332             | FORWARD
  333             | OUT

  334 visibility_specifier: PUBLISHED
  335                     | PUBLIC
  336                     | PROTECTED
  337                     | PRIVATE

  338 other: PACKAGE
  339      | UNIT
  340      | LIBRARY
  341      | PROGRAM
  342      | EXTERNAL

  343 identifier: IDENT
  344           | real_type_name
  345           | ord_type_name
  346           | string_type_name
  347           | property_specifier_directives
  348           | non_reserved
  349           | other


Terminals, with rules where they appear

$end (0) 0
error (256) 40 88 165 174 181 224
ABSOLUTE (258) 325
CONSTRUCT (259) 161
DESTRUCT (260) 162
INHERITED (261) 292
IMPLEMENT (262)
INLINE (263)
INTERFACE (264) 2
OBJ (265) 8 134 138
ON (266) 326
OP (267)
REINTRO (268)
SELF (269)
SHL (270) 61 272
SHR (271) 62 273
STRING (272) 131 314
UNIT (273) 339
USES (274)
XOR (275) 54 265
CLASS (276)
EXCEPT (277)
EXPORTS (278)
FINALIZATION (279)
FINALLY (280)
OUT (281) 202 203 333
PROPERTY (282)
RAISE (283)
THREADVAR (284)
TRY (285)
DISPOSE (286)
EXIT (287)
FALS (288)
NEW (289)
TRU (290)
AND (291) 63 274
ARRAY (292) 117
CASE (293) 233
CONST (294) 5 32 204 205
DIV (295) 59 270
DO (296) 245 246
DOWNTO (297) 248
ELSE (298) 230 243
END (299) 13 120 138 226 233
EXTERN (300)
FOR (301) 246
FORWARD (302) 332
FUNC (303) 9 136 179 180 181
GOTO (304)
IF (305) 229 230
LABEL (306)
MOD (307) 60 271
NOT (308) 70 279
NIL (309) 67 277
OF (310) 117 134 233
OR (311) 53 264
OTHERWISE (312)
PACKED (313) 114
PBEGIN (314) 11 226
PROCEDURE (315) 10 135 173 174
PFILE (316)
PROGRAM (317) 16 341
RECORD (318) 120
SET (319)
REPEAT (320) 244
THEN (321) 229 230
TO (322) 247
TYPE (323) 6 34 90
UNTIL (324) 244
VAR (325) 4 36 200 201
WHILE (326) 245
WITH (327)
ABSTRACT (328)
ALIAS (329)
ASSEMBLER (330)
CDECL (331)
CPPDECL (332)
DEFAULT (333) 315
EXPORT (334)
FAR (335)
FAR16 (336)
INDEX (337) 328
LOCAL (338)
NAME (339) 327
NEAR (340)
NOSTACKFRAME (341)
OLDFPCCALL (342)
PASCAL (343)
PRIVATE (344) 140 337
PROTECTED (345) 336
PUBLIC (346) 335
PUBLISHED (347) 334
READ (348) 316
REGISTER (349)
SAFECALL (350)
SOFTFLOAT (351)
STDCALL (352)
VIRTUAL (353)
WRITE (354) 318
WRITELN (355) 317
ASSIGN (356) 223 247 248
COLON (357) 39 126 136 150 163 164 179 198 200 202 204 237
COMMA (358) 21 83 128 152 168 207 239 251
DOT (359) 14 79 177 178 185 186 300
DOTDOT (360) 100 118 241 303
PTRUE (361) 73 283
PFALSE (362) 74 284
EQUAL (363) 38 39 43 87 164 211 254
GE (364) 48 259
GT (365) 46 257
LE (366) 47 258
LT (367) 45 256
LSQBRACK (368) 117 131 278 296 297
RSQBRACK (369) 117 131 278 296 297
LPAREN (370) 18 69 81 109 110 145 194 293 294 298 299
RPAREN (371) 18 69 81 109 110 145 194 293 294 298 299
MINUS (372) 52 76 263
NOTEQUAL (373) 44 255
PLUS (374) 51 75 262
SEMICOLON (375) 12 17 18 38 39 87 123 125 150 163 164 182 191 192 197
    228 235
SLASH (376) 58 269
STAR (377) 57 268
STARSTAR (378)
UPARROW (379) 72 80 112 281 301
EXCLA (380)
BITNOT (381)
BITAND (382)
BITOR (383)
DOLLAR (384)
PERCENT (385)
HASH (386)
ATTHERATE (387)
OVERRIDE (388)
IMPLEMENTATION (389) 3
RESOURCESTRING (390) 7
LIBRARY (391) 340
RESIDENT (392)
INITIALIZATION (393)
PACKAGE (394) 338
REQUIRES (395) 331
CONTAINS (396) 330
ADDROF (397) 68 289 290
DISPINTERFACE (398)
READONLY (399) 323
WRITEONLY (400) 322
NODEFAULT (401) 320
store_argumentD (402) 319
IMPLEMENTS (403) 321
MESSAGE (404) 329
EXTERNAL (405) 342
ASMBODY (406) 191 249
AT (407) 324
ASCIICHAR (408) 305 307
REAL48 (409)
SINGLE (410) 309
DOUBLE (411) 310
REALS (412) 308
EXTENDED (413)
CURRENCY (414)
COMP (415)
SHORTINT (416)
SMALLINT (417)
QWORD (418)
BYTE (419)
LONGINT (420)
INT64 (421)
WORD (422)
BOOLEAN (423) 312
CHAR (424) 313
WIDECHAR (425)
LONGWORD (426)
PCHAR (427)
CARDINAL (428)
OLEVARIANT (429)
ANSISTR (430)
WIDESTR (431)
AUTOMATED (432)
DYNAMIC (433)
OVERLOAD (434)
VARIANT (435)
INTEGER (436) 311
IDENT (437) 19 22 38 39 87 111 129 153 169 175 183 208 343
OCTAL (438)
BINARY (439)
HEXA (440)
CHAR_STRING (441) 304 306
INT (442) 84 119
FLOAT (443) 85
REAL (444)
IFX (445)


Nonterminals, with rules where they appear

$accept (191)
    on left: 0
Goal (192)
    on left: 1, on right: 0
error_recovery_token (193)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13, on right: 40 88 165 174 181
program_file (194)
    on left: 14, on right: 1
program_heading (195)
    on left: 15 16, on right: 14
program_heading_2 (196)
    on left: 17 18, on right: 16
program_name (197)
    on left: 19, on right: 16
program_param_list (198)
    on left: 20 21, on right: 18 21
program_param (199)
    on left: 22, on right: 20 21
program_block (200)
    on left: 23, on right: 14
program_decl_sect_list (201)
    on left: 24, on right: 23
impl_decl_sect_list (202)
    on left: 25 26, on right: 24 26 191 192
impl_decl_sect (203)
    on left: 27 28 29 30 31, on right: 26
const_decl_sect (204)
    on left: 32 33, on right: 27 33
type_decl_sect (205)
    on left: 34 35, on right: 28 35
var_decl_sect (206)
    on left: 36 37, on right: 29 37
const_decl (207)
    on left: 38 39 40, on right: 32 33
const_expr (208)
    on left: 41 42, on right: 38 69 82 83 86 109 110 131 211 240 241
const_relop (209)
    on left: 43 44 45 46 47 48, on right: 42
const_simple_expr (210)
    on left: 49 50, on right: 41 42 50
const_addop (211)
    on left: 51 52 53 54, on right: 50 102
const_term (212)
    on left: 55 56, on right: 49 50 56
const_mulop (213)
    on left: 57 58 59 60 61 62 63, on right: 56 104
const_factor (214)
    on left: 64 65 66 67 68 69 70 71 72 73 74, on right: 55 56 68 70
    71 72
sign (215)
    on left: 75 76, on right: 71 107 280
const_variable (216)
    on left: 77 78, on right: 64 78
const_variable_2 (217)
    on left: 79 80 81, on right: 78
const_func_expr_list (218)
    on left: 82 83, on right: 81
unsigned_number (219)
    on left: 84 85, on right: 65 106 275
typed_const (220)
    on left: 86, on right: 39 166
type_decl (221)
    on left: 87 88, on right: 34 35
type_decl_type (222)
    on left: 89 90 91, on right: 87
type_ref (223)
    on left: 92 93 94 95 96, on right: 39 89 90 117 126 150 163 164
simple_type (224)
    on left: 97 98 99 100, on right: 92
range_expr (225)
    on left: 101 102, on right: 100 102
range_term (226)
    on left: 103 104, on right: 101 102 104
range_factor (227)
    on left: 105 106 107 108 109 110, on right: 103 104 107
simple_type_identifier (228)
    on left: 111, on right: 99
pointer_type (229)
    on left: 112, on right: 94
structured_type (230)
    on left: 113 114, on right: 95
unpacked_structured_type (231)
    on left: 115 116, on right: 113 114
array_type (232)
    on left: 117, on right: 115
arr_simple_type (233)
    on left: 118, on right: 117
arr_factor (234)
    on left: 119, on right: 118
record_type (235)
    on left: 120, on right: 116
field_list (236)
    on left: 121, on right: 120
fixed_part (237)
    on left: 122 123, on right: 121
fixed_part_2 (238)
    on left: 124 125, on right: 122 123 125
record_section (239)
    on left: 126, on right: 124 125
record_section_id_list (240)
    on left: 127 128, on right: 126 128
record_section_id (241)
    on left: 129, on right: 127 128
string_type (242)
    on left: 130 131, on right: 93
procedural_type (243)
    on left: 132, on right: 96
procedural_type_kind (244)
    on left: 133 134, on right: 132
procedural_type_decl (245)
    on left: 135 136, on right: 133 134
object_type (246)
    on left: 137, on right: 91
old_object_type (247)
    on left: 138, on right: 137
oot_privat_list (248)
    on left: 139 140, on right: 138
oot_component_list (249)
    on left: 141 142 143 144, on right: 138 140
oot_successor (250)
    on left: 145 146, on right: 138
oot_typeidentifier (251)
    on left: 147, on right: 145
oot_field_list (252)
    on left: 148 149, on right: 142 143 149
oot_field (253)
    on left: 150, on right: 148 149
oot_id_list (254)
    on left: 151 152, on right: 150 152
oot_field_identifier (255)
    on left: 153, on right: 151 152
oot_method_list (256)
    on left: 154 155, on right: 143 144 155
oot_method (257)
    on left: 156, on right: 154 155
oot_method_head (258)
    on left: 157 158 159 160, on right: 156
oot_constructor_head (259)
    on left: 161, on right: 159
oot_destructor_head (260)
    on left: 162, on right: 160
var_decl (261)
    on left: 163 164 165, on right: 36 37
var_init_value (262)
    on left: 166, on right: 164
var_name_list (263)
    on left: 167 168, on right: 163 164 165 168
var_name (264)
    on left: 169, on right: 167 168
proc_decl (265)
    on left: 170, on right: 30
func_decl (266)
    on left: 171, on right: 31
Marker3 (267)
    on left: 172, on right: 23 191 192
proc_heading (268)
    on left: 173 174, on right: 157 170
proc_name (269)
    on left: 175 176 177 178, on right: 161 162 173 174 177 178
func_heading (270)
    on left: 179 180 181, on right: 158 171
fp_directives (271)
    on left: 182, on right: 161 162 173 179 180
func_name (272)
    on left: 183 184 185 186, on right: 179 180 181 185 186
proc_block (273)
    on left: 187, on right: 170
func_block (274)
    on left: 188, on right: 171
proc_block_decl (275)
    on left: 189 190, on right: 187 188
asm_block (276)
    on left: 191, on right: 190
block (277)
    on left: 192, on right: 189
fp_list (278)
    on left: 193 194, on right: 135 136 161 162 173 179
fp_sect_list (279)
    on left: 195 196 197, on right: 194 197
fp_sect (280)
    on left: 198 199 200 201 202 203 204 205, on right: 196 197
param_name_list (281)
    on left: 206 207, on right: 198 199 200 201 202 203 204 205 207
param_name (282)
    on left: 208, on right: 206 207
fptype (283)
    on left: 209, on right: 136 179 210 211
fptype_new (284)
    on left: 210 211, on right: 198 200 202 204
stmt (285)
    on left: 212, on right: 227 228 231 232 237 245 246
unlabelled_stmt (286)
    on left: 213 214 215 216 217 218 219 220 221 222, on right: 212
assignment (287)
    on left: 223 224, on right: 214
proc_call (288)
    on left: 225, on right: 215
compound_stmt (289)
    on left: 226, on right: 23 192 216
stmt_list (290)
    on left: 227 228, on right: 226 228 243 244
if_stmt (291)
    on left: 229 230, on right: 217
then_branch (292)
    on left: 231, on right: 229 230
else_branch (293)
    on left: 232, on right: 230
case_stmt (294)
    on left: 233, on right: 218
case_list (295)
    on left: 234 235, on right: 233 235
case_item (296)
    on left: 236 237, on right: 234 235
case_label_list (297)
    on left: 238 239, on right: 237 239
case_label (298)
    on left: 240 241, on right: 238 239
else_case (299)
    on left: 242 243, on right: 233
repeat_stmt (300)
    on left: 244, on right: 219
while_stmt (301)
    on left: 245, on right: 220
for_stmt (302)
    on left: 246, on right: 221
for_special (303)
    on left: 247 248, on right: 246
asm_stmt (304)
    on left: 249, on right: 222
expr_list (305)
    on left: 250 251, on right: 251 296 298
expr (306)
    on left: 252 253, on right: 223 229 230 233 244 245 247 248 250
    251 293 302 303
relop (307)
    on left: 254 255 256 257 258 259, on right: 253
simple_expr (308)
    on left: 260 261, on right: 252 253 261
addop (309)
    on left: 262 263 264 265, on right: 261
term (310)
    on left: 266 267, on right: 260 261 267
mulop (311)
    on left: 268 269 270 271 272 273 274, on right: 267
factor (312)
    on left: 275 276 277 278 279 280 281 282 283 284, on right: 266
    267 279 280 281
Marker (313)
    on left: 285, on right: 50 56 102 104 228 229 230 244 245 261 267
Marker2 (314)
    on left: 286, on right: 230
var_reference (315)
    on left: 287 288, on right: 223 225 282
var_address (316)
    on left: 289 290, on right: 287 290
variable (317)
    on left: 291 292 293 294 295, on right: 287 288 295
var_specifiers (318)
    on left: 296 297 298 299 300 301, on right: 295
elem (319)
    on left: 302 303, on right: 278
literal (320)
    on left: 304 305 306 307, on right: 66 108 276 306 307
real_type_name (321)
    on left: 308 309 310, on right: 98 344
ord_type_name (322)
    on left: 311 312 313, on right: 97 345
string_type_name (323)
    on left: 314, on right: 130 346
property_specifier_directives (324)
    on left: 315 316 317 318 319 320 321 322 323, on right: 347
non_reserved (325)
    on left: 324 325 326 327 328 329 330 331 332 333, on right: 348
visibility_specifier (326)
    on left: 334 335 336 337, on right: 176 178 184 186
other (327)
    on left: 338 339 340 341 342, on right: 349
identifier (328)
    on left: 343 344 345 346 347 348 349, on right: 77 79 105 109 112
    147 177 185 209 247 248 291 292 300


state 0

    0 $accept: . Goal $end

    PROGRAM  shift, and go to state 1

    $default  reduce using rule 15 (program_heading)

    Goal             go to state 2
    program_file     go to state 3
    program_heading  go to state 4


state 1

   16 program_heading: PROGRAM . program_name program_heading_2

    IDENT  shift, and go to state 5

    program_name  go to state 6


state 2

    0 $accept: Goal . $end

    $end  shift, and go to state 7


state 3

    1 Goal: program_file .

    $default  reduce using rule 1 (Goal)


state 4

   14 program_file: program_heading . program_block DOT

    $default  reduce using rule 25 (impl_decl_sect_list)

    program_block           go to state 8
    program_decl_sect_list  go to state 9
    impl_decl_sect_list     go to state 10


state 5

   19 program_name: IDENT .

    $default  reduce using rule 19 (program_name)


state 6

   16 program_heading: PROGRAM program_name . program_heading_2

    LPAREN     shift, and go to state 11
    SEMICOLON  shift, and go to state 12

    program_heading_2  go to state 13


state 7

    0 $accept: Goal $end .

    $default  accept


state 8

   14 program_file: program_heading program_block . DOT

    DOT  shift, and go to state 14


state 9

   23 program_block: program_decl_sect_list . Marker3 compound_stmt

    $default  reduce using rule 172 (Marker3)

    Marker3  go to state 15


state 10

   24 program_decl_sect_list: impl_decl_sect_list .
   26 impl_decl_sect_list: impl_decl_sect_list . impl_decl_sect

    CONST      shift, and go to state 16
    FUNC       shift, and go to state 17
    PROCEDURE  shift, and go to state 18
    TYPE       shift, and go to state 19
    VAR        shift, and go to state 20

    $default  reduce using rule 24 (program_decl_sect_list)

    impl_decl_sect   go to state 21
    const_decl_sect  go to state 22
    type_decl_sect   go to state 23
    var_decl_sect    go to state 24
    proc_decl        go to state 25
    func_decl        go to state 26
    proc_heading     go to state 27
    func_heading     go to state 28


state 11

   18 program_heading_2: LPAREN . program_param_list RPAREN SEMICOLON

    IDENT  shift, and go to state 29

    program_param_list  go to state 30
    program_param       go to state 31


state 12

   17 program_heading_2: SEMICOLON .

    $default  reduce using rule 17 (program_heading_2)


state 13

   16 program_heading: PROGRAM program_name program_heading_2 .

    $default  reduce using rule 16 (program_heading)


state 14

   14 program_file: program_heading program_block DOT .

    $default  reduce using rule 14 (program_file)


state 15

   23 program_block: program_decl_sect_list Marker3 . compound_stmt

    PBEGIN  shift, and go to state 32

    compound_stmt  go to state 33


state 16

   32 const_decl_sect: CONST . const_decl

    error  shift, and go to state 34
    IDENT  shift, and go to state 35

    const_decl  go to state 36


state 17

  179 func_heading: FUNC . func_name fp_list COLON fptype fp_directives
  180             | FUNC . func_name fp_directives
  181             | FUNC . func_name error error_recovery_token

    PRIVATE    shift, and go to state 37
    PROTECTED  shift, and go to state 38
    PUBLIC     shift, and go to state 39
    PUBLISHED  shift, and go to state 40
    IDENT      shift, and go to state 41

    func_name             go to state 42
    visibility_specifier  go to state 43


state 18

  173 proc_heading: PROCEDURE . proc_name fp_list fp_directives
  174             | PROCEDURE . proc_name error error_recovery_token

    PRIVATE    shift, and go to state 37
    PROTECTED  shift, and go to state 38
    PUBLIC     shift, and go to state 39
    PUBLISHED  shift, and go to state 40
    IDENT      shift, and go to state 44

    proc_name             go to state 45
    visibility_specifier  go to state 46


state 19

   34 type_decl_sect: TYPE . type_decl

    error  shift, and go to state 47
    IDENT  shift, and go to state 48

    type_decl  go to state 49


state 20

   36 var_decl_sect: VAR . var_decl

    IDENT  shift, and go to state 50

    var_decl       go to state 51
    var_name_list  go to state 52
    var_name       go to state 53


state 21

   26 impl_decl_sect_list: impl_decl_sect_list impl_decl_sect .

    $default  reduce using rule 26 (impl_decl_sect_list)


state 22

   27 impl_decl_sect: const_decl_sect .
   33 const_decl_sect: const_decl_sect . const_decl

    error  shift, and go to state 34
    IDENT  shift, and go to state 35

    CONST      reduce using rule 27 (impl_decl_sect)
    FUNC       reduce using rule 27 (impl_decl_sect)
    PBEGIN     reduce using rule 27 (impl_decl_sect)
    PROCEDURE  reduce using rule 27 (impl_decl_sect)
    TYPE       reduce using rule 27 (impl_decl_sect)
    VAR        reduce using rule 27 (impl_decl_sect)
    ASMBODY    reduce using rule 27 (impl_decl_sect)

    const_decl  go to state 54


state 23

   28 impl_decl_sect: type_decl_sect .
   35 type_decl_sect: type_decl_sect . type_decl

    error  shift, and go to state 47
    IDENT  shift, and go to state 48

    CONST      reduce using rule 28 (impl_decl_sect)
    FUNC       reduce using rule 28 (impl_decl_sect)
    PBEGIN     reduce using rule 28 (impl_decl_sect)
    PROCEDURE  reduce using rule 28 (impl_decl_sect)
    TYPE       reduce using rule 28 (impl_decl_sect)
    VAR        reduce using rule 28 (impl_decl_sect)
    ASMBODY    reduce using rule 28 (impl_decl_sect)

    type_decl  go to state 55


state 24

   29 impl_decl_sect: var_decl_sect .
   37 var_decl_sect: var_decl_sect . var_decl

    IDENT  shift, and go to state 50

    $default  reduce using rule 29 (impl_decl_sect)

    var_decl       go to state 56
    var_name_list  go to state 52
    var_name       go to state 53


state 25

   30 impl_decl_sect: proc_decl .

    $default  reduce using rule 30 (impl_decl_sect)


state 26

   31 impl_decl_sect: func_decl .

    $default  reduce using rule 31 (impl_decl_sect)


state 27

  170 proc_decl: proc_heading . proc_block

    $default  reduce using rule 25 (impl_decl_sect_list)

    impl_decl_sect_list  go to state 57
    proc_block           go to state 58
    proc_block_decl      go to state 59
    asm_block            go to state 60
    block                go to state 61


state 28

  171 func_decl: func_heading . func_block

    $default  reduce using rule 25 (impl_decl_sect_list)

    impl_decl_sect_list  go to state 57
    func_block           go to state 62
    proc_block_decl      go to state 63
    asm_block            go to state 60
    block                go to state 61


state 29

   22 program_param: IDENT .

    $default  reduce using rule 22 (program_param)


state 30

   18 program_heading_2: LPAREN program_param_list . RPAREN SEMICOLON
   21 program_param_list: program_param_list . COMMA program_param

    COMMA   shift, and go to state 64
    RPAREN  shift, and go to state 65


state 31

   20 program_param_list: program_param .

    $default  reduce using rule 20 (program_param_list)


state 32

  226 compound_stmt: PBEGIN . stmt_list END
